# profit-and-loss-converter

./: Cargo.toml  build.rs
src/: main.rs  modules.rs  settings.json
src/modules/: csv_reader.rs  excel_writer.rs  profit_and_loss.rs  profit_and_loss_csv.rs  settings.rs  template_pattern.rs
src/modules/csv/: lib.rs
src/modules/dividend_list/: lib.rs
src/modules/excel/: cell_style.rs  coordinate.rs  lib.rs  mod.rs
src/modules/profit_and_loss/: lib.rs  profit_and_loss.rs
