[package]
name = "profit-and-loss-converter"
version = "0.1.0"
edition = "2021"

[build]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
once_cell = "1.19.0"
serde = "1.0.203"
serde_json = "1.0.117"
umya-spreadsheet = "1.2.7"
